# CV

Sample1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cxx
Sample2/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cxx
ex01/p1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lenaNew.pgm  lenaNew.ppm  main.cxx
ex01/p2/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cxx
ex01/p2/release/: lena.pgm  lena.ppm
ex04/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cxx
